--- a/Section_14_DjangoL1/first_project/templates/first_app/index.html
+++ b/Section_14_DjangoL1/first_project/templates/first_app/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First App</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <h1>Hello this is index.html!</h1>
     {{insert_me}}
+
+    <h2>Hi, this picture comming form static/images</h2>
+    <img src="{% static 'images/GuidoVanRossum.jpg' %}" alt="GuidoVanRossum">
+
+    <script src="{%static 'js/first.js' %}"></script>
 </body>
 </html>
