--- a/Section_20_DjangoL5/learning_users/templates/index.html
+++ b/Section_20_DjangoL5/learning_users/templates/index.html
@@ -1,11 +1,14 @@
-{% extends "basic_app/base.html" %}
-
+<!doctype html>
+{% extends "base.html" %}
 {% block body_block %}
-
-    <div class="jumbotron">
+<div class="container">
+    <div  class="mt-4 p-5 bg-dark text-white rounded">
         <h1>Django Level Five</h1>
     </div>
-
+</div>
 {% endblock %}
+
+
+
 
 
