--- a/Section_20_DjangoL5/learning_users/templates/registration.html
+++ b/Section_20_DjangoL5/learning_users/templates/registration.html
@@ -1,21 +1,24 @@
-{% extends "basic_app/base.html" %}
-{% load staticfiles %}
+{% extends "base.html" %}
+{% load static %}
 
 {% block body_block %}
-    <div class="jumbotron">
-        {% if registered %}
-            <h1>Thank you for registering!</h1>
+<div class="container">
 
-            {% else %}
-                <h1>Register Here!</h1>
-                <h3>Fill out the form:</h3>
-                <form method="post" enctype="multipart/form-data">
-                        {% csrf_token %}
-                        {{ user_form.as_p }}
-                        {{ profile_form.as_p }}
-                </form>
+    <div class="mt-4 p-5 bg-dark text-white rounded">
+        {% if registered %}
+        <h1>Thank you for registering!</h1>
+        {% else %}
+        <h1>Register Here!</h1>
+        <h3>Fill out the form:</h3>
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{ user_form.as_p }}
+            {{ profile_form.as_p }}
+
+            <input type="submit" value="register">
+        </form>
         {% endif %}
     </div>
 
+</div>
 {% endblock %}
-
