--- a/Section_22_Advanced_Django_CBV/advcbv/basic_app/templates/basic_app/school_detail.html
+++ b/Section_22_Advanced_Django_CBV/advcbv/basic_app/templates/basic_app/school_detail.html
@@ -12,5 +12,9 @@
     {% for student in school_detail.students.all %}
         <p>{{student.name}} who is {{student.age}} year old.</p>
     {% endfor %}
+
+</div>
+<div class="container my-3">
+    <p><a class="btn btn-outline-warning" href="{% url 'basic_app:update' pk=school_detail.pk %}">Update</a></p>
 </div>
 {% endblock %}
