--- a/Section_23_First_Project/mysite/blog/templates/blog/about.html
+++ b/Section_23_First_Project/mysite/blog/templates/blog/about.html
@@ -1,9 +1,13 @@
 {% extends 'blog/base.html' %}
-{% block body_block %}
-    <h1>About Blog site.</h1>
+{% block content %}
+<h1>About Blog site.</h1>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore commodi dolore dolor libero ad eos fugit obcaecati
+    aliquid, itaque sapiente unde, illum reiciendis explicabo labore beatae voluptatum harum qui earum doloribus id
+    blanditiis ab. Impedit, id reiciendis. Id aliquam eveniet at cupiditate nesciunt ipsa, illo esse optio nisi tempore
+    laudantium officia dolorum neque impedit voluptate perferendis porro explicabo! Quae magnam, et voluptate ducimus
+    perferendis molestias, doloribus aliquid temporibus quos quis, eum facere ullam ex quibusdam quas harum voluptatem
+    iusto aspernatur soluta eaque. Quam velit aliquam quibusdam voluptate quae repellendus in autem iure assumenda sunt
+    consequatur explicabo blanditiis, optio et nobis.
+</p>
+
 {% endblock %}
-
-
-
-
-
