--- a/Section_23_First_Project/mysite/blog/templates/blog/base.html
+++ b/Section_23_First_Project/mysite/blog/templates/blog/base.html
@@ -49,7 +49,7 @@
 
 
     <div class="content container">
-        <div class="rwo">
+        <div class="row">
             <div class="col-md-8">
                 <div class="blog_post">
                     {% block content %}
