--- a/Section_23_First_Project/mysite/blog/templates/blog/about.html
+++ b/Section_23_First_Project/mysite/blog/templates/blog/about.html
@@ -1,13 +1,92 @@
 {% extends 'blog/base.html' %}
 {% block content %}
-<h1>About Blog site.</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore commodi dolore dolor libero ad eos fugit obcaecati
-    aliquid, itaque sapiente unde, illum reiciendis explicabo labore beatae voluptatum harum qui earum doloribus id
-    blanditiis ab. Impedit, id reiciendis. Id aliquam eveniet at cupiditate nesciunt ipsa, illo esse optio nisi tempore
-    laudantium officia dolorum neque impedit voluptate perferendis porro explicabo! Quae magnam, et voluptate ducimus
-    perferendis molestias, doloribus aliquid temporibus quos quis, eum facere ullam ex quibusdam quas harum voluptatem
-    iusto aspernatur soluta eaque. Quam velit aliquam quibusdam voluptate quae repellendus in autem iure assumenda sunt
-    consequatur explicabo blanditiis, optio et nobis.
-</p>
+<div>
+
+    <h1>About Pen&Paper.</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore commodi dolore dolor libero ad eos fugit
+        obcaecati
+        aliquid, itaque sapiente unde, illum reiciendis explicabo labore beatae voluptatum harum qui earum doloribus id
+        blanditiis ab. Impedit, id reiciendis. Id aliquam eveniet at cupiditate nesciunt ipsa, illo esse optio nisi
+        tempore
+        laudantium officia dolorum neque impedit voluptate perferendis porro explicabo! Quae magnam, et voluptate
+        ducimus
+        perferendis molestias, doloribus aliquid temporibus quos quis, eum facere ullam ex quibusdam quas harum
+        voluptatem
+        iusto aspernatur soluta eaque. Quam velit aliquam quibusdam voluptate quae repellendus in autem iure assumenda
+        sunt
+        consequatur explicabo blanditiis, optio et nobis.
+    </p>
+
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid ex quod quis quam! Quo, quos. Sequi, quia quas
+        dolorum eaque voluptatibus nulla quos! Nisi, minima. Corporis, magni? Pariatur ea aspernatur iste id iure, modi
+        ratione possimus illum molestias natus nemo, odit animi placeat corrupti repudiandae sit, error minus ad cum.
+        Neque,
+        ut voluptate et non iure mollitia facilis! Tempore numquam atque ipsam. Unde possimus temporibus quod odio
+        dolorem
+        ullam tenetur illo. Dolore corrupti quia totam, quisquam non hic optio, perspiciatis nihil saepe magnam maiores
+        quis
+        minima exercitationem id maxime at! Cumque nulla animi, officia beatae voluptas similique optio, vitae molestias
+        repudiandae amet debitis! Minima sunt aperiam alias laudantium repudiandae voluptatem quae, quidem doloremque
+        tenetur saepe, numquam incidunt omnis? Laborum fuga, ipsam id, accusamus ratione maxime consectetur perspiciatis
+        ea
+        officia aperiam eos inventore! At harum quos eos, doloribus molestias, temporibus alias deleniti numquam
+        aspernatur
+        eligendi eius facere accusamus magni maxime expedita? Magnam dolorum facere a culpa illo sit consequuntur. Vel,
+        a
+        inventore modi eligendi, assumenda ipsam voluptate voluptatem atque eum reprehenderit illo quae molestiae
+        dolores
+        doloremque aliquid nihil quia unde repellat sint alias pariatur. Consequuntur quam perspiciatis nostrum ut,
+        exercitationem nobis ipsa odit quisquam ducimus rerum. Tempora, esse expedita? Neque quas dolorum nam distinctio
+        minima explicabo nulla a nobis, delectus ipsam perferendis numquam totam, amet placeat laborum nostrum dolor
+        necessitatibus aperiam doloremque esse minus cumque, maiores culpa adipisci. Optio ab dolorem ipsa ullam? Libero
+        exercitationem vel excepturi dignissimos itaque impedit sunt dolores obcaecati. Quaerat quibusdam at hic, et
+        ducimus
+        suscipit eos consequuntur. Delectus perferendis nam est reprehenderit laudantium deleniti minus cupiditate,
+        expedita
+        temporibus quis hic quidem magni amet, mollitia ullam, id maxime nulla aut atque? Nam iste necessitatibus unde
+        quisquam porro sit distinctio! Tempora voluptatibus harum nesciunt distinctio fuga blanditiis. Nostrum et earum
+        veritatis quis tempore qui hic modi non at, quidem iste eius expedita sint delectus, dolorum nihil vel magni
+        quam.
+        Ad rem quos nesciunt maxime, omnis dignissimos. Nulla aut unde commodi voluptate distinctio ipsa magnam sapiente
+        neque itaque error, quaerat perferendis minus quos laudantium facere illum, voluptatum culpa ipsam. Dolorum amet
+        provident architecto, nam fuga, cupiditate molestias voluptates accusamus commodi molestiae expedita,
+        consequatur
+        nihil nemo eveniet esse alias sint assumenda temporibus. Pariatur obcaecati non esse, ipsam rerum animi fuga
+        eligendi aliquam! Porro non, corrupti laudantium animi iure accusamus itaque? Suscipit enim corporis mollitia
+        possimus assumenda nam deserunt quasi iste facilis? Quidem, nemo. Ducimus rerum error molestias veniam ut
+        obcaecati
+        eum id culpa ab, dignissimos porro, a accusamus totam nesciunt. Doloribus dolorum fugit est adipisci harum in,
+        nam
+        quidem accusamus quo aspernatur ullam corporis suscipit exercitationem et dicta quisquam nemo vitae! Porro,
+        tempora
+        excepturi. Qui architecto praesentium doloribus repellendus facilis, eligendi eius odit provident, id assumenda,
+        tempora laborum illum rerum in voluptate eos sint minus dolorem libero! Deserunt maxime, quo quae nesciunt vero
+        quas
+        officiis fugiat omnis dolores cupiditate quasi voluptas molestias neque tempore, molestiae natus quidem cum eum,
+        temporibus error deleniti accusantium vel repellat fugit. Totam, quasi harum voluptatibus alias similique optio,
+        excepturi itaque, rem pariatur quisquam ut tempore.
+    </p>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor nostrum velit hic debitis, recusandae voluptate
+        distinctio delectus neque quis, quae quibusdam nihil illum sapiente beatae odit maxime dolorem voluptatem
+        blanditiis. Aliquam veniam similique magni modi iusto voluptatem possimus esse dolor obcaecati. Deleniti
+        similique
+        ex repellat maxime voluptatibus. Repudiandae iste quia cupiditate saepe vitae placeat itaque et quam iusto eum,
+        porro consequuntur natus rem, sint ex labore sed dolore, velit perspiciatis dolorum modi expedita nesciunt
+        voluptatum! Corporis, minima quam optio cupiditate perspiciatis repellat inventore distinctio, in asperiores,
+        nihil
+        sit dolor. Beatae nemo porro debitis ad deserunt aliquid laudantium quis fugiat ex! Autem dolorum sit officiis
+        possimus nemo nihil vero dignissimos sapiente magni harum excepturi, doloribus delectus quisquam veniam maiores.
+        Mollitia magni minus hic harum nam incidunt unde accusamus ipsum, vero, consectetur tenetur. Pariatur iste,
+        architecto maxime fuga modi necessitatibus, dolores officiis, voluptates voluptatem consequuntur similique nobis
+        culpa fugit facilis beatae aut maiores illum dolorum consequatur illo nesciunt iure? Libero deserunt,
+        praesentium
+        blanditiis adipisci voluptate sint quae maxime sed dolorum nobis alias quidem ipsam enim optio dicta.
+        Voluptatum,
+        minus modi animi rerum alias quae quaerat! Saepe, est iure vel unde earum ducimus? Eligendi molestiae,
+        asperiores
+        quibusdam possimus quam quod eaque rem dolore?
+    </p>
+</div>
 
 {% endblock %}
