--- a/Section_23_First_Project/mysite/blog/templates/registration/login.html
+++ b/Section_23_First_Project/mysite/blog/templates/registration/login.html
@@ -5,12 +5,12 @@
     <h2>Please Login:</h2>
     <h3>(Must be Superuser, please check with the site admin.)</h3>
 
-    {% if form.error %}
+    {% if form.errors %}
         <p>You'r username and password didn't match! Please try again...</p>
     {% endif %}
     <form action="{% url 'login' %}" method="POST">
         {% csrf_token %}
-        {% form.as_p %}
+        {{ form.as_p }}
         <input class="btn btn-primary" type="submit" name="" value="Login">
         <input type="hidden" name="next" value="{{next}}">
     </form>
