--- a/Section_24_Second_Project/simplesocial/posts/templates/posts/post_list.html
+++ b/Section_24_Second_Project/simplesocial/posts/templates/posts/post_list.html
@@ -18,7 +18,7 @@
         {% endif %}
         <div class="card card-with-shadow">
             <div class="content">
-                <h5 class="title">ALl Groups.</h5>
+                <h5 class="title">All Groups.</h5>
                 <ul class="list-unstyled">
                     {% for other_group in get_other_groups %}
                             <li class="group li-with-bullet">
