--- a/Section_24_Second_Project/simplesocial/groups/templates/groups/group_form.html
+++ b/Section_24_Second_Project/simplesocial/groups/templates/groups/group_form.html
@@ -1,11 +1,16 @@
-{% extends 'groups/group_base.html' %}
+{% extends "groups/group_base.html" %}
 {% load bootstrap5 %}
+
 {% block group_content %}
-<h1>Create a new group.</h1>
-<form action="{% url 'groups:create' %}" method="POST" id="groupForm">
-    {% csrf_token %}
-    {% bootstrap_form form %}
-    <input type="submit" class="btn btn-primary btn-lg">
-</form>
+<div class="container">
+  <h4>Create A New Group</h4>
+  <form method="POST" action="{% url 'groups:create' %}" id="groupForm">
+  	{% csrf_token %}
+  	{% bootstrap_form form %}
+    {% buttons %}
+  		<button type="submit" class="btn btn-primary btn-large">Create</button>
+  	{% endbuttons %}
+  </form>
+</div>
 
 {% endblock %}
