--- a/Section_24_Second_Project/simplesocial/posts/templates/posts/post_form.html
+++ b/Section_24_Second_Project/simplesocial/posts/templates/posts/post_form.html
@@ -1,11 +1,13 @@
-{% extends 'posts/post_form.html' %}
+{% extends "posts/post_base.html" %}
 {% load bootstrap5 %}
 {% block post_content %}
     <h4>Create a new Post.</h4>
     <form action="{% url 'posts:create' %}" id="postForm" method="POST">
         {% csrf_token %}
-        {% bootstrap_form  form%}
+        {% bootstrap_form form %}
+        {% buttons %}
         <input type="submit" value="Post" class="btn btn-primary btn-lg">
+        {% endbuttons %}
     </form>
 {% endblock %}
 
