--- a/Section_24_Second_Project/simplesocial/templates/base.html
+++ b/Section_24_Second_Project/simplesocial/templates/base.html
@@ -20,21 +20,22 @@
 
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/5e7aeae22a.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
 
-    <nav class="navbar sticky-top navbar-expand-lg mynav" role="navication" id="navbar" style="background-color: #183D3D;">
+    <nav class="navbar navbar-expand-lg bg-dark mynav" role="navigation" id="navbar">
         <div class="container">
             <a class="navbar-brand text-white" href="{% url 'home' %}">Star Social</a>
             <ul class="navbar-nav nav-right">
                 {% if user.is_authenticated %}
-                <li><a class="nav-link text-white" href="#">Post</a></li>
-                <li><a class="nav-link text-white" href="#">Groups</a></li>
-                <li><a class="nav-link text-white" href="#">Create Group</a></li>
+                <li><a class="nav-link text-white" href="{% url 'posts:create' %}">Post</a></li>
+                <li><a class="nav-link text-white" href="{% url 'groups:all' %}">Groups</a></li>
+                <li><a class="nav-link text-white" href="{% url 'groups:create' %}">Create Group</a></li>
                 <li><a class="nav-link text-white" href="{% url 'accounts:logout' %}">Log Out</a></li>
                 {% else %}
-                <li><a class="nav-link text-white" href="#">Groups</a></li>
+                <li><a class="nav-link text-white" href="{% url 'groups:all' %}">Groups</a></li>
                 <li><a class="nav-link text-white" href="{% url 'accounts:login' %}">Log In</a></li>
                 <li><a class="nav-link text-white" href="{% url 'accounts:signup' %}">Sign Up</a></li>
                 {% endif %}
@@ -48,13 +49,15 @@
         {% endblock %}
     </div>
 
+    <canvas id="canvas"></canvas>
+
+    <script src="{% static 'simplesocial/js/master.js' %}" type="text/javascript"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 
-
-    {% include "footer.html" %}
 </body>
 
 </html>
